﻿drkns 27.09.2014 15:33:27 +0200 - build 4122

1. Во внешний DialogBuilder добавлена поддержка дополнительных кнопок.

2. Во внутренний DialogBuilder добавлена поддержка списков.

drkns 27.09.2014 14:25:43 +0200 - build 4121

1. Продолжение 4120.

drkns 26.09.2014 19:23:14 +0200 - build 4120

1. Рефакторинг Message: строки отдельно, кнопки отдельно.

drkns 22.09.2014 19:59:11 +0200 - build 4119

1. С форума: Отвалилось добавление файла из панели в командную строку при открытом автодополнении в командной строке.

drkns 22.09.2014 19:21:31 +0200 - build 4118

1. #0002804: PN_CHECKMASK не распознает неправильные регексы в 3.0.4117

drkns 21.09.2014 15:58:34 +0200 - build 4117

1. Оптимизация make_vector.

zg 21.09.2014 13:35:14 +0200 - build 4116

1. уточнение 4109.2: открытие просмотра падало, если в панелях была открыта информационная панель
   в папке без описания или быстрый просмотр для папки.

drkns 21.09.2014 11:46:25 +0200 - build 4115

1. Макросы для эмуляции variadic templates вынесены отдельно, улучшены и использованы вместо ручной копипасты везде, где нужно.

drkns 20.09.2014 21:26:14 +0200 - build 4114

1. Продолжение 4112.

drkns 20.09.2014 17:53:05 +0200 - build 4113

1. VC10 fix.

drkns 20.09.2014 17:14:32 +0200 - build 4112

1. Уточнение 4111.

2. Неправильно определялась позиция ошибки при компиляции регулярного выражения.

3. Показываем текст и позицию при ошибке компиляции регулярного выражения или работы с ним.

drkns 20.09.2014 17:00:20 +0200 - build 4111

1. Именованные группы в регулярных выражениях. Пока только на уровне библиотеки.

drkns 19.09.2014 23:47:55 +0200 - build 4110

1. Разделим common.hpp на компоненты, а то совсем тёмный лес уже.

2. Не собиралось в gcc 4.8.1.

zg 19.09.2014 02:15:54 +0200 - build 4109

1. VE_CLOSE приходит в быстрый просмотр и информационную панель до удаления просмотра.

2. просмотр и редактор не удаляются во время обработки любых событий.
