@@ -1,4 +1,8 @@
-﻿drkns 27.09.2014 15:33:27 +0200 - build 4122
+﻿drkns 29.09.2014 14:09:13 +0200 - build 4123
+
+1. Во внешний DialogBuilder добавлена поддержка флагов.
+
+drkns 27.09.2014 15:33:27 +0200 - build 4122
 
 1. Во внешний DialogBuilder добавлена поддержка дополнительных кнопок.
 
